corrected z-indexes in css

--- a/_static/style.css
+++ b/_static/style.css
@@ -18,6 +18,7 @@ body {
     text-align: center;
     font-size: 18pt;
     font-style: oblique;
+    z-index: 5;
 }
 
 .flags {
@@ -43,6 +44,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    z-index: 1;
 }
 
 .movie-grid li {
@@ -51,11 +53,13 @@ body {
 }
 
 .movie {
+    position: relative;
     width: 140px;
     border-style:solid;
     border-radius: 5px;
     border-width: 2px;
-    transition: transform 0.3s ease
+    z-index: 1;
+    transition: transform 0.3s ease, z-index 0s ease;
 }
 
 .movie-title,
@@ -97,15 +101,19 @@ body {
     opacity: 0;
     white-space: nowrap;
     transition: opacity 0.3s;
+    z-index: 30;
+
 }
 
 .image-container:hover .tooltip {
     visibility: visible;
     opacity: 1;
+
 }
 
 .movie:hover {
     transform: scale(1.1);
+    z-index: 15;
 }
 
 
@@ -117,7 +125,7 @@ body {
 }
 
 .movie-grid {
-  margin-top: 10px;
+  margin-top: 20px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
